force-app/main/default/objects/Experlogix__ConfigurationChunk__c/Experlogix__ConfigurationChunk__c.object-meta.xml
<CustomObject>
    <label>Experlogix Configuration Chunk</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RecordNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experlogix Configuration Chunks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>