force-app/main/default/objects/Experlogix__ConfigurationChunk__c/fields/Experlogix__ChunkData__c.field-meta.xml
<CustomField>
    <fullName>Experlogix__ChunkData__c</fullName>
    <label>ChunkData</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>