force-app/main/default/objects/Experlogix__ConfigurationChunk__c/fields/Experlogix__Configuration__c.field-meta.xml
<CustomField>
    <fullName>Experlogix__Configuration__c</fullName>
    <label>Configuration</label>
    <referenceTo>Experlogix__Configuration__c</referenceTo>
    <relationshipName>ConfigurationChunks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>