force-app/main/default/objects/Experlogix__ConfigurationChunk__c/fields/Experlogix__RevisionNumber__c.field-meta.xml
<CustomField>
    <fullName>Experlogix__RevisionNumber__c</fullName>
    <label>RevisionNumber</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>